Use latest kryo5 and use its native serializers for immutable collections